# code-challenge

./: .gitignore  README.md  pyproject.toml
input/: malformed_input.txt
src/spandigital/: app.py
tests/spandigital/: test_app.py  test_compute_scoreboard.py  test_format_ranking.py  test_get_teams_ranking.py  test_read_input.py
