[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "code-challenge"
version = "0.1.0"
description = "Code challenge for undisclosed company name."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.setuptools.packages.find]
where = ['src']

[dependency-groups]
dev = [
    "pytest>=9.0.3"
]

[tool.pytest.ini_options]
testpaths = ['tests']
pythonpath = ['src']

[project.scripts]
game-stats = "spandigital.app:main"
